--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@types/mysql": "^2.15.21",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.15.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.2"
